--- a/appendices/b.surveys.tex
+++ b/appendices/b.surveys.tex
@@ -47,7 +47,7 @@ Antonia Bertolino (ISTI-CNR)\\
 \section{Questionnaire Sent to Practitioners During Literature Review}
 \label{sec:app_prac_questionnaire}
 
-\begin{table}[]
+\begin{table}[h!]
 \centering
 \small
 \rowcolors{1}{}{gray!10}
@@ -267,7 +267,7 @@ Other... \\
 \section{Questions for Practitioners at the Industrial Partner}
 \label{sec:app_ind_questions}
 
-\begin{table}[]
+\begin{table}[h!]
 \centering
 \small
 \rowcolors{1}{}{gray!10}
