--- a/production.bib
+++ b/production.bib
@@ -15,7 +15,7 @@
   organization={IEEE}
 }
 
-@unpublished{greca_live_2022_p,
+@article{greca_live_2022_p,
 	author = {Greca, Renan and Miranda, Breno and Bertolino, Antonia},
 	date-added = {2022-12-01 10:44:18 +0100},
 	date-modified = {2022-12-01 10:45:24 +0100},
