--- a/secondaries.bib
+++ b/secondaries.bib
@@ -80,7 +80,8 @@ Conclusion: Test case prioritization has already been considerably discussed in 
 	publisher = {Public Library of Science San Francisco, CA USA},
 	title = {Value-based cost-cognizant test case prioritization for regression testing},
 	volume = {17},
-	year = {2022}}
+	year = {2022}
+}
 
 @inproceedings{bajaj_survey_2018,
 	abstract = {Efficient regression testing plays an important role for organizations that have large investment in active, ever-changing software development. Efficiency can be obtained by optimizing the test cases as it provides a balance between the safety and precision. Many optimization techniques from various domains have been applied in regression testing for optimizing the search and the solutions. But nature-inspired algorithms are gaining more popularity now a days as the algorithms are more efficient for complex problems. In this paper, we have explored the research work done by various researchers on regression testing using natureinspired approaches. It is found that biology inspired computation e.g. genetic algorithm have been widely used in regression testing optimization with the intent of maximizing fault or code coverage in minimum time. It is also concluded that nature-inspired approaches have great potential to optimize regression testing problems.},
@@ -343,3 +344,33 @@ Conclusion: Test case prioritization has already been considerably discussed in 
 	title = {Regression Test Case Prioritization: A Systematic Literature Review},
 	volume = {12},
 	year = {2021}}
+	
+@inproceedings{legunsen2016,
+  title={An extensive study of static regression test selection in modern software evolution},
+  author={Legunsen, Owolabi and Hariri, Farah and Shi, August and Lu, Yafeng and Zhang, Lingming and Marinov, Darko},
+  booktitle={Proceedings of the 2016 24th ACM SIGSOFT International Symposium on Foundations of Software Engineering},
+  pages={583--594},
+  year={2016}
+}
+
+@ARTICLE{luo2018static,  author={Luo, Qi and Moran, Kevin and Zhang, Lingming and Poshyvanyk, Denys},  journal={IEEE Transactions on Software Engineering},   title={How Do Static and Dynamic Test Case Prioritization Techniques Perform on Modern Software Systems? An Extensive Study on GitHub Projects},   year={2019},  volume={45},  number={11},  pages={1054-1080},  doi={10.1109/TSE.2018.2822270}}
+
+@article{soetens2016change,
+  title={Change-based test selection: an empirical evaluation},
+  author={Soetens, Quinten David and Demeyer, Serge and Zaidman, Andy and P{\'e}rez, Javier},
+  journal={Empirical software engineering},
+  volume={21},
+  number={5},
+  pages={1990--2032},
+  year={2016},
+  publisher={Springer}
+}
+
+@inproceedings{henard2016,
+ title={Comparing White-Box and Black-Box Test Prioritization}, 
+ author={Henard, Christopher and Papadakis, Mike and Harman, Mark and Jia, Yue and Le Traon, Yves},
+booktitle={2016 IEEE/ACM 38th International Conference on Software Engineering (ICSE)}, 
+ year={2016},
+  pages={523-534},
+doi={10.1145/2884781.2884791}
+}
