--- a/tables/tab_selected.tex
+++ b/tables/tab_selected.tex
@@ -2,7 +2,7 @@
 \scriptsize \citetalias{#1} & % Citation alias
 %\scriptsize \citep{#1} & % Standard citation
 \scriptsize \citeyear{#1} & % Citation year
-\scriptsize \citet{#1} & % Authors
+\scriptsize \nohyphens{\citet{#1}} & % Authors
 \scriptsize #2 & % Full title
 \scriptsize {\color{olive} #3} & % TCP
 \scriptsize {\color{teal} #4} & % TCS
